New Crowdin updates (#1758)

--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Este método de la API no ha sido implementado todavía.",
   "api.errors.GenericApiError": "Se ha producido un error, inténtalo de nuevo más tarde.",
   "api.errors.IncorrectPasswordError": "Contraseña de billetera incorrecta.",
-  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
+  "api.errors.NotEnoughMoneyToSendError": "No hay suficientes fondos para hacer esta transacción.",
   "api.errors.PromiseNotCalledYetError": "Se accedió al resultado antes de que la ejecución terminara.",
   "api.errors.ReportRequestError": "Hubo un problema enviando la solicitud de soporte.",
   "api.errors.WalletAlreadyImportedError": "La billetera que estás intentando importar ya existe.",
@@ -177,7 +177,7 @@
   "profile.languageSelect.title": "Selección de idioma",
   "profile.nightly.acknowledgedRisks": "Comprendo el riesgo",
   "profile.nightly.header": "<strong>Yoroi Nightly se actualiza automáticamente cada noche</strong> con las últimas características en desarrollo. Aunque nunca lanzaremos intencionalmente versiones con bugs o con código roto, las características pueden estar todavía en progreso y contener errores.",
-  "profile.nightly.recommendation1": "Sólo se usan billeteras con saldo pequeño para minimizar el riesgo.",
+  "profile.nightly.recommendation1": "Usa billeteras con poco saldo para minimizar el riesgo.",
   "profile.nightly.recommendation2": "Reporta cualquier problema a EMURGO a través del canal Yoroi Nightly.",
   "profile.nightly.recommendationHeader": "Recomendamos:",
   "profile.nightly.title": "Yoroi Nightly",
