--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -145,8 +145,8 @@
   "myWallets.wallets.neverSync": "Nunca se sincronizó",
   "myWallets.wallets.sumInfoText": "Saldo total",
   "networkError.label.message": "ADVERTENCIA: La conexión con el servidor falló.<br>Por favor, comprueba tu conexión a Internet, o visita <a target='blank' href='https://twitter.com/YoroiWallet'>nuestra cuenta en Twitter</a>.<br>El saldo y el historial de transacciones pueden mostrarse incorrectos hasta que nuestros servidores regresen a la normalidad. Tu saldo real no se verá afectado.",
-  "nightly.banner.label.message": "ESTÁS USANDO YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Para ver las notificaciones aquí, primero <strong> elija un stake pool </strong> y delegue su {ticker}.",
+  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "noticeBoard.noNoticeText.chooseAPool": "Para ver las notificaciones aquí, primero <strong> elije un stake pool </strong> y luego delega tus {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Aún no has delegado una participación.",
   "noticeBoard.notice.costChanged.subMessage": "El antiguo coste era {oldCost} {currency} y el nuevo coste es {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "El coste del stake pool ha cambiado",
@@ -315,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Comisiones por transacción",
   "transfer.summary.transferButton.label": "Transferir fondos",
-  "upgradetx.explanation": "Encontramos algunas {ticker} en tu billetera de la era Byron. ¿Te gustaría transferirlas a tu nueva billetera Shelley?",
+  "upgradetx.explanation": "Encontramos algunas {ticker} en tu billetera de la era Byron. ¿Te gustaría transferirlas a tu nueva billetera de Shelley?",
   "uri.display.dialog.copy.notification": "La URL ha sido copiada exitosamente",
   "uri.display.dialog.title": "URL generada",
   "uri.display.dialog.usabilityWarning": "Este enlace sólo puede ser abierto por usuarios que tengan Yoroi instalado en su navegador",
@@ -428,7 +428,7 @@
   "wallet.currency.pick.header": "Selecciona una moneda o plataforma",
   "wallet.currency.pick.testnetDescription": "Las testnets son cadenas alternativas que se utilizan exclusivamente para pruebas. Esto permite a los desarrolladores de aplicaciones o testers experimentar sin tener que usar monedas reales.",
   "wallet.dashboard.empty.text": "Dirígete a la sección de delegación para elegir el stake pool al que quieres delegar.",
-  "wallet.dashboard.empty.title": "Aún no ha delegado su {ticker}",
+  "wallet.dashboard.empty.title": "Aún no has delegado tus {ticker}",
   "wallet.dashboard.epochEndTitle": "Finaliza en",
   "wallet.dashboard.epochProgress": "Progreso del epoch",
   "wallet.dashboard.epochTooltip": "Nota: Sólo la primera recompensa luego de delegar requerirá {numEpochs} epochs. Posterior a ello, las recompensas llegarán en cada epoch.",
@@ -463,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Participación",
   "wallet.dashboard.stakePool.title": "Stake pool delegado",
   "wallet.dashboard.stakePool.viewWebpage": "Ver la página web del pool",
-  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
+  "wallet.dashboard.summary.adaTitle": "Total de {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total delegado",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} puede ser corregido",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} no puede ser corregido",
-  "wallet.dashboard.summary.mangled.line1": "Su billetera tiene {adaAmount} {ticker} con diferente preferencia de delegación.",
-  "wallet.dashboard.summary.mangled.line2": "Recomendamos que {transactionMessage} para delegar la {ticker}",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} pueden ser corregidas",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} no pueden ser corregidas",
+  "wallet.dashboard.summary.mangled.line1": "Tu billetera tiene {adaAmount} {ticker} con diferente preferencia de delegación.",
+  "wallet.dashboard.summary.mangled.line2": "Recomendamos que {transactionMessage} para delegar las {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "realizar una transacción",
   "wallet.dashboard.summary.note": "¿Menos de lo que esperabas?",
   "wallet.dashboard.summary.rewardsTitle": "Total recompensas",
@@ -494,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Realiza un control del estado del stake pool, y del tiempo que resta para recibir una recompensa, desde la página de Seguimiento",
   "wallet.delegation.transaction.success.title": "Delegación exitosa",
   "wallet.deprecation.byronLine1": "La actualización del protocolo de Shelley añade un nuevo tipo de billetera de Shelley que permite la delegación.",
-  "wallet.deprecation.byronLine2": "Para delegar su {ticker} tendrá que actualizar a una billetera Shelley.",
+  "wallet.deprecation.byronLine2": "Para delegar tus {ticker} deberás actualizar a una billetera de Shelley.",
   "wallet.hw.common.error.101": "Los permisos necesarios no fueron concedidos por el usuario. Por favor, inténtalo de nuevo.",
   "wallet.hw.incorrectDevice": "Se ha detectado un dispositivo incorrecto. El dispositivo esperado era {expectedDeviceId}, pero se obtuvo el dispositivo {responseDeviceId}. Por favor, conecta el dispositivo correcto",
   "wallet.hw.incorrectVersion": "Se ha detectado una versión incorrecta del dispositivo. Tienes la versión {responseVersion}, pero Yoroi soporta la versión {supportedVersions}.",
@@ -549,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Las direcciones internas (o direcciones \"cambiantes\") mantienen tu privacidad ocultando en la blockchain las direcciones que te pertenecen.",
   "wallet.receive.page.internalWarning2": "se muestran aquí para propósitos de auditoría personal y <strong>nunca</strong> deberían ser usadas.",
   "wallet.receive.page.label": "Etiqueta",
-  "wallet.receive.page.mangledWarning1": "Las direcciones destrozadas contribuyen a su balance {ticker}, pero tienen la preferencia de delegación incorrecta",
+  "wallet.receive.page.mangledWarning1": "Las direcciones destrozadas contribuyen a tu saldo de {ticker}, pero tienen la preferencia de delegación incorrecta",
   "wallet.receive.page.noResultsFoundLabel": "No se encontraron resultados",
   "wallet.receive.page.notFoundAnyAddresses": "No pudimos encontrar ninguna dirección que coincida con tu búsqueda.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (sumarización del UTxO)",
   "wallet.receive.page.rewardAddressLine1": "La dirección de recompensa contiene tus recompensas, y se utiliza para validar cualquier cambio en tu preferencia de delegación",
-  "wallet.receive.page.rewardAddressLine2": "No puedes enviar {ticker} a direcciones de recompensar, pero la mostramos para propósitos de auditoría personal",
+  "wallet.receive.page.rewardAddressLine2": "No puedes enviar {ticker} a direcciones de recompensa, pero la mostramos para propósitos de auditoría personal",
   "wallet.receive.page.unmangeLabel": "Corregir la preferencia de delegación",
   "wallet.receive.page.verifyAddressLabel": "Verifica la dirección",
   "wallet.receive.page.walletAddressLabel": "Dirección de tu billetera",
@@ -601,11 +601,11 @@
   "wallet.send.confirmationDialog.walletPasswordLabel": "Contraseña de gastos",
   "wallet.send.form.calculatingFee": "Calculando comisión...",
   "wallet.send.form.cannotSendToLegacy": "No puedes enviar a direcciones antiguas (cualquier dirección creada antes del 29 de noviembre de 2019)",
-  "wallet.send.form.cannotSendToP2SH": "No se puede enviar a direcciones de pago a script-hash",
+  "wallet.send.form.cannotSendToP2SH": "No puedes enviar a direcciones pay-to-script-hash",
   "wallet.send.form.cannotSendToReward": "No puedes enviar a una cuenta de recompensas",
   "wallet.send.form.errors.invalidAddress": "Por favor, ingresa una dirección válida.",
   "wallet.send.form.errors.invalidAmount": "Por favor, ingresa un monto válido.",
-  "wallet.send.form.errors.tooSmallUtxo": "No puede enviar menos de {minUtxo} {ticker}.",
+  "wallet.send.form.errors.tooSmallUtxo": "No puedes enviar menos de {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Dirección de la Billetera",
   "wallet.send.form.receiver.label": "Dirección de destino",
   "wallet.send.form.sendAll.checkboxLabel": "Enviar todo",
@@ -706,12 +706,12 @@
   "wallet.transfer.deregister.line5": "La cancelación del registro significa que esta clave ya no recibirá recompensas hasta que vuelvas a registrar la llave de delegación (normalmente delegando nuevamente en un stake pool)",
   "wallet.transfer.deregister.noNeedToDeregister": "NO es necesario que te desregistres para delegar en otro stake pool. Puedes cambiar tu preferencia de delegación en cualquier momento",
   "wallet.transfer.deregister.title": "¿También desregistrar la clave de delegación?",
-  "wallet.transfer.instruction": "Cualquier {ticker} reclamada será transferida a su billetera actualmente seleccionada",
+  "wallet.transfer.instruction": "Cualquier {ticker} reclamada será transferida a la billetera actualmente seleccionada",
   "wallet.undelegation.transaction.explanationLine1": "NO es necesario que canceles la delegación antes de cambiar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Tomará 2 epochs, a partir del final del epoch actual, para que la des-delegación se haga efectiva",
   "wallet.unsupported.subtitle": "La billetera seleccionada no soporta esta funcionalidad",
   "wallet.unsupported.title": "Tipo de billetera no soportada",
-  "wallet.withdrawal.transaction.unregister": "Esta transacción desregistrará una o más llaves de staking, devolviéndole su {refundAmount} {ticker} de su depósito",
+  "wallet.withdrawal.transaction.unregister": "Esta transacción desregistrará una o más claves de delegación, devolviendo las {refundAmount} {ticker} de tu depósito",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar al portapapeles",
   "widgets.explorer.tooltip": "Ir a {websiteName}",
   "widgets.warningBox.headerText": "ATENCIÓN:",
