--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -46,7 +46,7 @@
   "app.errors.unableToLoad": "Het ophalen is niet mogelijk!",
   "app.errors.unexpectedError": "Er heeft zich een onverwachte storing voorgedaan, Probeer het alstublieft opnieuw.",
   "app.errors.unknowError": "Onbekende fout.",
-  "crash.screen.title": "Yoroi crashed",
+  "crash.screen.title": "Yoroi is gecrashed",
   "daedalusTransfer.error.noTransferTxError": "Er is geen transactie om te versturen.",
   "daedalusTransfer.error.transferFundsError": "Het is niet mogelijk om fondsen te versturen.",
   "daedalusTransfer.error.webSocketRestoreError": "Fout tijdens het herstellen van \"Blockchain\" adressen.",
@@ -91,7 +91,7 @@
   "global.labels.delegate": "Delegeren",
   "global.labels.deleteMemo": "Verwijder memo",
   "global.labels.editMemo": "Wijzig memo",
-  "global.labels.epoch": "Tijdperk",
+  "global.labels.epoch": "Periode",
   "global.labels.error": "Fout",
   "global.labels.finish": "Klaar",
   "global.labels.goBack": "Ga terug",
@@ -108,7 +108,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Betaalsleutel",
   "global.labels.spendingKeyHash": "Vingerafdruk betaalsleutel",
-  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKey": "Stemsleutel",
   "global.labels.stakingKeyHash": "Vingerafdruk stemsleutel",
   "global.labels.upgrade": "Opwaarderen",
   "global.language.chinese.simplified": "简体中文",
@@ -145,24 +145,24 @@
   "myWallets.wallets.neverSync": "Nooit gesynchroniseerd",
   "myWallets.wallets.sumInfoText": "Totaal saldo",
   "networkError.label.message": "WAARSCHIWING: Geen verbinding met de server.<br>Controleer uw internetverbinding of bezoek ons op: <a target='blank' href='https://twitter.com/YoroiWallet'> Twitter </a>.<br>De balans en transactiegeschiedenis kunnen afwijkingen vertonen tot onze servers weer normaal functioneren. Uw balans is niet aangetast.",
-  "nightly.banner.label.message": "U BENT OP \"YOROI NIGHTLY\" ({network}).",
+  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
   "noticeBoard.noNoticeText.chooseAPool": "Om hier meldingen te bekijken, moet u eerst <strong> een pool kiezen </strong> en uw {ticker} delegeren.",
   "noticeBoard.noNoticeText.notDelegatedYet": "U heeft nog geen stemmen gedelegeerd.",
   "noticeBoard.notice.costChanged.subMessage": "Oude kosten {oldCost} {currency}, nieuwe kosten zijn {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "De kosten van de Stakepool zijn veranderd",
   "noticeBoard.notice.feeChanged.subMessage": "De oude transactiekosten waren {oldFee} {currency}, de nieuwe bedragen {newFee} {currency}",
   "noticeBoard.notice.feeChanged.title": "De Stakepool vergoeding is aangepast",
-  "noticeBoard.notice.noRewardForUndelegation.subMessage": "2 tijdperken geleden heeft u alle delegatie teruggedraaid",
-  "noticeBoard.notice.noRewardForUndelegation.title": "U heeft geen beloning ontvangen voor het afgelopen tijdperk",
+  "noticeBoard.notice.noRewardForUndelegation.subMessage": "2 periodes geleden heeft u alle delegaties teruggedraaid",
+  "noticeBoard.notice.noRewardForUndelegation.title": "U heeft geen beloning ontvangen voor de afgelopen periode",
   "noticeBoard.notice.poolToRetire.subMessage": "Om beloningen te ontvangen kunt u delegeren naar een andere Stakepool",
   "noticeBoard.notice.poolToRetire.title": "Stakepool [{poolTicker}] is van plan zich terug te trekken",
-  "noticeBoard.notice.rewardRecieved.subMessage": "U heeft {rewardAmount} {currency} ontvangen als beloning voor tijdperk {epochNumber}",
+  "noticeBoard.notice.rewardRecieved.subMessage": "U heeft {rewardAmount} {currency} ontvangen als beloning voor periode {epochNumber}",
   "noticeBoard.notice.rewardRecieved.title": "Beloningen zijn ontvangen",
-  "noticeBoard.notice.stakeDelegated.subMessage": "U zult weer een beloning ontvangen vanaf het volgende tijdperk",
+  "noticeBoard.notice.stakeDelegated.subMessage": "U zult weer een beloning ontvangen vanaf de volgende periode",
   "noticeBoard.notice.stakeDelegated.title": "U heeft gedelegeerd naar de Stakepool [{poolTicker}]",
-  "noticeBoard.notice.stakeRedelegated.subMessage": "Beloningen voor de volgende 2 tijdperken komen nog van Stakepool [{poolTicker}]",
+  "noticeBoard.notice.stakeRedelegated.subMessage": "Beloningen voor de volgende 2 periodes komen nog van Stakepool [{poolTicker}]",
   "noticeBoard.notice.stakeRedelegated.title": "U heeft uw delegatie omgezet naar Stakepool [{poolTicker}]",
-  "noticeBoard.notice.stakeUndelegated.subMessage": "Beloningen voor de volgende 2 tijdperken zullen nog ontvangen worden",
+  "noticeBoard.notice.stakeUndelegated.subMessage": "Beloningen voor de volgende 2 periodes zullen nog ontvangen worden",
   "noticeBoard.notice.stakeUndelegated.title": "U heeft uw delegatie van Stakepool [{poolTicker}] ingetrokken",
   "noticeBoard.topbar.title": "Kennisgeving",
   "notprod.label.message": "WAARSCHUWING: Dit is geen productie versie. Bij een onverwachte gebeurtenis, dubbel-check de Yoroi installatie.",
@@ -431,7 +431,7 @@
   "wallet.dashboard.empty.title": "U heeft uw {ticker} nog niet gedelegeerd",
   "wallet.dashboard.epochEndTitle": "Tijd tot einde periode",
   "wallet.dashboard.epochProgress": "Periode voortgang",
-  "wallet.dashboard.epochTooltip": "Opmerking: alleen de eerste beloning na het delegeren duurt {numEpochs} tijdvakken. Daarna komen beloningen in elk tijdperk.",
+  "wallet.dashboard.epochTooltip": "Opmerking: alleen de eerste beloning na het delegeren duurt {numEpochs} periodes. Daarna komen beloningen in elke periode.",
   "wallet.dashboard.graph.dayToggleLabel": "Dag (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Periode ({epochLength} dagen)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Periode (1 dag)",
@@ -483,7 +483,7 @@
   "wallet.debugwallet.explanation3": "Als u deze tekst niet verwacht had, neem dan contact op met het support team: {contactSupportLink}.",
   "wallet.delegate.form.invalidPoolId": "Foute Stakepool ID",
   "wallet.delegation.poolInfo.fetching": "Ophalen van Stakepool informatie",
-  "wallet.delegation.transaction.approximationLabel": "Huidige beloning volgens verwachting die u per tijdperk zal ontvangen:",
+  "wallet.delegation.transaction.approximationLabel": "Huidige beloning volgens verwachting die u per periode zal ontvangen:",
   "wallet.delegation.transaction.explanationLine1": "U kunt per keer maar naar 1 Stakepool delegeren",
   "wallet.delegation.transaction.explanationLine2": "U kunt op elk moment omschakelen naar een andere Stakepool",
   "wallet.delegation.transaction.explanationLine3": "U kunt uw delegatie op elk moment afbreken",
@@ -667,8 +667,8 @@
   "wallet.transaction.certificate.PoolRetirement": "Pool terugtrekking",
   "wallet.transaction.certificate.PoolUpdate": "Pool update",
   "wallet.transaction.certificate.StakeDelegation": "\"Stake\" (Stem) delegatie",
-  "wallet.transaction.certificate.StakeDeregistration": "Uitschrijving van de \"Staking\" Sleutel",
-  "wallet.transaction.certificate.StakeRegistration": "\"Staking\" Sleutel registratie",
+  "wallet.transaction.certificate.StakeDeregistration": "Uitschrijving van de Stemsleutel",
+  "wallet.transaction.certificate.StakeRegistration": "Stemsleutel registratie",
   "wallet.transaction.certificateLabel": "Certificaat",
   "wallet.transaction.certificatesLabel": "Certificaten",
   "wallet.transaction.confirmations": "bevestigingen",
@@ -708,7 +708,7 @@
   "wallet.transfer.deregister.title": "Ook de Stakepool sleutel uitschrijven?",
   "wallet.transfer.instruction": "Elke geclaimde {ticker} wordt overgebracht naar de portemonnee die nu door u gekozen is",
   "wallet.undelegation.transaction.explanationLine1": "U hoeft de delegatie NIET ongedaan te maken om van Stakepool te wisselen",
-  "wallet.undelegation.transaction.explanationLine2": "Het duurt 2 Epochs (tijdperken) na het einde van het huidige tijdvak om de delegatie in werking te laten treden",
+  "wallet.undelegation.transaction.explanationLine2": "Het duurt 2 periodes na het einde van het huidige tijdvak om de delegatie in werking te laten treden",
   "wallet.unsupported.subtitle": "De gekozen portemonnee ondersteunt deze functionaliteit niet",
   "wallet.unsupported.title": "Dit type portemonnee wordt niet ondersteund",
   "wallet.withdrawal.transaction.unregister": "Met deze transactie wordt de registratie van een of meer stemsleutels ongedaan gemaakt, waardoor u uw {refundAmount} {ticker} van uw storting terugkrijgt",
