New Crowdin updates (#1769)

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -145,7 +145,7 @@
   "myWallets.wallets.neverSync": "Niemals synchronisiert",
   "myWallets.wallets.sumInfoText": "Gesamtes Wallet Guthaben",
   "networkError.label.message": "WARNUNG: Verbindung zum Server fehlgeschlagen.<br>Bitte überprüfe Deine Internetverbindung oder <a target='blank' href='https://twitter.com/YoroiWallet'>unser Twitter Konto</a>.<br>Das angezeigte Guthaben und der Transaktions-Verlauf könnte unvollständig erscheinen, bis unsere Server wieder in Normalbetrieb sind. Dein effektives Guthaben ist davon aber nicht betroffen.",
-  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "nightly.banner.label.message": "DU VERWENDEST YOROI NIGHTLY.",
   "noticeBoard.noNoticeText.chooseAPool": "Um hier Benachrichtigungen zu sehen, <strong>wähle zuerst einen Stake pool</strong> und delegiere Deine {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Du hast noch keinen Stake delegiert.",
   "noticeBoard.notice.costChanged.subMessage": "Die bisherigen Kosten waren {oldCost} {currency} und die neuen Kosten sind {newCost} {currency}",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Einstellungen",
   "sidebar.transfer": "Einfordern / Übertragen",
   "sidebar.wallets": "Meine Wallets",
-  "testnet.shelley.label.message": "DU BIST IM TESTNETZ NETZWERK ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Es wird ungefähr eine Minute dauern, um deinen Kontostand wiederherzustellen. Im nächsten Schritt wird eine Transaktion angezeigt, die dein gesamtes Guthaben transferiert. Bitte überprüfe die Details der Transaktion sehr sorgfältig. Es ist notwendig, für diese Transaktion eine Standard-Transaktionsgebühr im Cardano-Netzwerk zu bezahlen.",
   "transfer.form.masterkey.input.label": "Generalschlüssel",
   "transfer.instructions.attention.title.label": "Achtung",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Adressen, die durch die Kombination eines Ausgabe- und eines Staking-Schlüssels gebildet wurden",
   "wallet.address.category.p2pk": "Adressen, die direkt aus einem öffentlichen Schlüssel generiert werden",
   "wallet.address.category.reward": "Adresse deines Staking Schlüssels",
+  "wallet.address.category.single": "Adressen die nur einen Ausgaben- aber keinen Staking-schlüssel enthalten",
   "wallet.amountInput.feesLabel": "+ {amount} an Gebühren",
   "wallet.backup.dialog.legacy.checkConfirm": "Möchtest Du prüfen, ob Deine Wallet aufgerüstet werden muss?",
   "wallet.backup.dialog.legacy.explanation": "Wenn Du am 29. November 2019 ADA in deiner Brieftasche hattest\n    muss Deine Wallet zu einer Shelley \"reward wallet\" aufgerüstet werden.",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Alle",
   "wallet.receive.navigation.baseLabel": "Basis",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Unternehmen",
   "wallet.receive.navigation.groupLabel": "Gruppe",
   "wallet.receive.navigation.hasBalanceLabel": "Hat Saldo",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
