--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -145,7 +145,7 @@
   "myWallets.wallets.neverSync": "Nunca se sincronizó",
   "myWallets.wallets.sumInfoText": "Saldo total",
   "networkError.label.message": "ADVERTENCIA: La conexión con el servidor falló.<br>Por favor, comprueba tu conexión a Internet, o visita <a target='blank' href='https://twitter.com/YoroiWallet'>nuestra cuenta en Twitter</a>.<br>El saldo y el historial de transacciones pueden mostrarse incorrectos hasta que nuestros servidores regresen a la normalidad. Tu saldo real no se verá afectado.",
-  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "nightly.banner.label.message": "ESTÁS USANDO YOROI NIGHTLY.",
   "noticeBoard.noNoticeText.chooseAPool": "Para ver las notificaciones aquí, primero <strong> elije un stake pool </strong> y luego delega tus {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Aún no has delegado una participación.",
   "noticeBoard.notice.costChanged.subMessage": "El antiguo coste era {oldCost} {currency} y el nuevo coste es {newCost} {currency}",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Configuración",
   "sidebar.transfer": "Reclamar / Transferir",
   "sidebar.wallets": "Mis billeteras",
-  "testnet.shelley.label.message": "ESTÁS EN LA RED DE PRUEBA ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Tardará aproximadamente 1 minuto en restablecer tu saldo. En el siguiente paso, se presentará una transacción que moverá todos tus fondos. Por favor, revisa los detalles de la transacción cuidadosamente. Para realizar dicha transacción, deberás pagar una comisión por transacción estándar en la red de Cardano.",
   "transfer.form.masterkey.input.label": "Clave Maestra",
   "transfer.instructions.attention.title.label": "Atención",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Direcciones formadas por la combinación de una contraseña de gastos y una clave de delegación",
   "wallet.address.category.p2pk": "Direcciones generadas directamente a partir de una clave pública",
   "wallet.address.category.reward": "La dirección de la clave de delegación",
+  "wallet.address.category.single": "Direcciones que sólo contienen una clave de gastos y ninguna clave de staking",
   "wallet.amountInput.feesLabel": "+ {amount} ADA de comisión",
   "wallet.backup.dialog.legacy.checkConfirm": "¿Deseas comprobar si tu billetera necesita ser actualizada?",
   "wallet.backup.dialog.legacy.explanation": "Si tenías ADA en tu billetera el 29 de noviembre de 2019, tienes que actualizar tu billetera a una \"billetera de recompensas\" de Shelley.",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Todo",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Empresa",
   "wallet.receive.navigation.groupLabel": "Grupo",
   "wallet.receive.navigation.hasBalanceLabel": "Tiene saldo",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
