--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -145,7 +145,7 @@
   "myWallets.wallets.neverSync": "Jamais synchronisé",
   "myWallets.wallets.sumInfoText": "Solde total",
   "networkError.label.message": "Avertissement : La connexion au serveur a échoué.<br>Veuillez vérifier votre connexion internet ou <a target='blank' href='https://twitter.com/YoroiWallet'>notre compte Twitter</a>.<br>Le solde affiché ainsi que l'historique des transactions peuvent apparaître erronés jusqu'à ce que la situation sur nos serveurs revienne à la normale, mais votre solde réel n'est pas affecté.",
-  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "nightly.banner.label.message": "VOUS ÊTES SUR YOROI NIGHTLY.",
   "noticeBoard.noNoticeText.chooseAPool": "Pour voir les notifications ici, commencez par <strong>choisir un groupe d'enjeu</strong> et déléguez vos {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Vous n'avez pas encore délégué d'enjeu.",
   "noticeBoard.notice.costChanged.subMessage": "L'ancien coût était de {oldCost} {currency} et le nouveau coût est de {newCost} {currency}",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Paramètres",
   "sidebar.transfer": "Réclamation / Transfert",
   "sidebar.wallets": "Mes wallets",
-  "testnet.shelley.label.message": "VOUS ÊTES SUR LE RÉSEAU TEST ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "La restauration du solde prend en moyenne 1 minute. Lors de l'étape suivante, vous verrez une transaction se proposer à vous afin de déplacer tous vos fonds vers Yoroi. Veuillez vérifier avec minutie les détails de la transaction. Vous devrez vous acquitter des frais de transactions standards sur le réseau Cardano afin d'effectuer la transaction.",
   "transfer.form.masterkey.input.label": "Clé maître",
   "transfer.instructions.attention.title.label": "Attention",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Adresses formées par la combinaison d'une clé de dépense et d'une clé de mise",
   "wallet.address.category.p2pk": "Adresses générées directement à partir d'une clé publique",
   "wallet.address.category.reward": "Adresse pour votre clé de staking",
+  "wallet.address.category.single": "Adresses ne contenant qu'une clé de dépense et aucune clé de mise en jeu",
   "wallet.amountInput.feesLabel": "+ {amount} de frais de transaction",
   "wallet.backup.dialog.legacy.checkConfirm": "Voulez-vous vérifier si votre portefeuille a besoin d'être mis à jour ?",
   "wallet.backup.dialog.legacy.explanation": "Si vous aviez ADA dans votre portefeuille le 29 novembre 2019 vous devez remplacer votre portefeuille par un \"portefeuille de récompense\" Shelley.",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Tout",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Entreprise",
   "wallet.receive.navigation.groupLabel": "Groupe",
   "wallet.receive.navigation.hasBalanceLabel": "A un solde",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
