--- a/app/i18n/locales/hr-HR.json
+++ b/app/i18n/locales/hr-HR.json
@@ -293,7 +293,7 @@
   "sidebar.settings": "Settings",
   "sidebar.transfer": "Claim / Transfer",
   "sidebar.wallets": "My wallets",
-  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "It will take about 1 minute to restore your balance. In the next step, you will be presented with a transaction that will move all of your funds. Please review the details of the transaction carefully. You will need to pay a standard transaction fee on the Cardano network to make the transaction.",
   "transfer.form.masterkey.input.label": "Master key",
   "transfer.instructions.attention.title.label": "Attention",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
   "wallet.address.category.reward": "Address for your staking key",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount} of fees",
   "wallet.backup.dialog.legacy.checkConfirm": "Do you want to check if your wallet needs to be upgraded?",
   "wallet.backup.dialog.legacy.explanation": "If you had any ADA in your wallet on November 29th, 2019\n    you have to upgrade your wallet to a Shelley \"reward wallet\".",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "All",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
