--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -293,7 +293,7 @@
   "sidebar.settings": "Impostazioni",
   "sidebar.transfer": "Richiesta / Trasferimento",
   "sidebar.wallets": "I miei portafogli",
-  "testnet.shelley.label.message": "SEI SULLA RETE TESTNET ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Ci vorrà circa 1 minuto per ripristinare il tuo saldo. Nel passaggio successivo, ti verrà presentata una transazione che trasferirà tutti i tuoi fondi. Si prega di rivedere attentamente i dettagli della transazione. Per effettuare la transazione dovrai pagare una tariffa di transazione standard sulla rete Cardano.",
   "transfer.form.masterkey.input.label": "Chiave principale",
   "transfer.instructions.attention.title.label": "Attenzione",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Indirizzi formati dalla combinazione di una chiave di spesa e una chiave di staking",
   "wallet.address.category.p2pk": "Indirizzi generati direttamente da una chiave pubblica",
   "wallet.address.category.reward": "Indirizzo per la vostra chiave di staking",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount} di commissioni",
   "wallet.backup.dialog.legacy.checkConfirm": "Vuoi verificare se il tuo portafoglio necessita di essere aggiornato?",
   "wallet.backup.dialog.legacy.explanation": "Se avevi ADA nel tuo portafoglio il 29 novembre 2019\n     devi aggiornare il tuo portafoglio a un \"portafoglio ricompense\" di Shelley.",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Tutto",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "Gruppo",
   "wallet.receive.navigation.hasBalanceLabel": "Ha Saldo",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
