--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -293,7 +293,7 @@
   "sidebar.settings": "設定",
   "sidebar.transfer": "復元/送金",
   "sidebar.wallets": "マイ・ウォレット",
-  "testnet.shelley.label.message": "テストネットのネットワークを使用しています ({network})",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "残高が復元されるまで1分程度かかります。復元後、ダイダロスウォレットからヨロイウォレットへの送金取引が表示されます。トランザクションの詳細を慎重に確認してください。 トランザクションを行うには、Cardanoネットワークの標準トランザクション手数料を支払う必要があります。",
   "transfer.form.masterkey.input.label": "マスターキー",
   "transfer.instructions.attention.title.label": "注意",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
   "wallet.address.category.reward": "Address for your staking key",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+{amount}の手数料",
   "wallet.backup.dialog.legacy.checkConfirm": "ウォレットのアップグレードが必要かどうかのチェックを行いますか？",
   "wallet.backup.dialog.legacy.explanation": "2019年11月29日の時点でヨロイウォレットにADAを保管していた場合は、ウォレットをShelley用「報酬ウォレット」にアップグレードする必要があります。",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "すべて",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "残高あり",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
