--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -293,7 +293,7 @@
   "sidebar.settings": "설정",
   "sidebar.transfer": "복구 / 전송",
   "sidebar.wallets": "내 지갑",
-  "testnet.shelley.label.message": "당신은 현재 테스트넷 네트워크 ({network})에 있습니다.",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "잔고가 복원될 때까지 1분 정도 소요됩니다. 복원 후, 다이달로스 지갑에서 요로이 지갑으로 모든 자금을 이동시키는 전송이 표시됩니다. 전송 상세내역을 신중히 확인해 주십시오. 전송을 하기 위해서는 카르다노의 네트워크 표준 전송 수수료 지불이 필요합니다.",
   "transfer.form.masterkey.input.label": "마스터키",
   "transfer.instructions.attention.title.label": "주의사항",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
   "wallet.address.category.reward": "Address for your staking key",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount}의 수수료",
   "wallet.backup.dialog.legacy.checkConfirm": "지갑 업그레이드가 필요한지 체크하겠습니까?",
   "wallet.backup.dialog.legacy.explanation": "만약 당신이 2019년 11월 29일에 ADA를 지갑에 보관하고 있었다면, 새로운 쉘리 \"보상 지갑\"으로 지갑을 업그레이드 해야 합니다.",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "All",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
