--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -145,7 +145,7 @@
   "myWallets.wallets.neverSync": "Nunca sincronizou",
   "myWallets.wallets.sumInfoText": "Saldo total da carteira",
   "networkError.label.message": "AVISO: Falha na conexão com o servidor. <br> Por favor, verifique sua conexão com a internet ou <a target='blank' href='https://twitter.com/YoroiWallet'> nossa conta no Twitter </a>. <br> O saldo exibido e o histórico de transações podem parecer incorretos até que nossos servidores voltem ao normal, mas seu saldo real não é afetado.",
-  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "nightly.banner.label.message": "VOCÊ ESTÁ USANDO YOROI NIGHTLY.",
   "noticeBoard.noNoticeText.chooseAPool": "Para visualizar notificações aqui, primeiro <strong> escolha uma piscina de participação e delegue sua {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Você ainda não delegou o seu stake.",
   "noticeBoard.notice.costChanged.subMessage": "O custo anterior era {oldCost} {currency} e o novo custo será {newCost} {currency}",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Configurações",
   "sidebar.transfer": "Reivindicar / Transferir",
   "sidebar.wallets": "Minhas carteiras",
-  "testnet.shelley.label.message": "VOCÊ ESTA NA REDE DE TESTES ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Demora cerca de 1 minuto para restaurar o seu saldo. Na próxima etapa, você será apresentado a uma transação que movimentará todos os seus fundos. Por favor, revise os detalhes da transação com cuidado. Você precisará pagar uma taxa de transação padrão na rede Cardano para realizar a transação.",
   "transfer.form.masterkey.input.label": "Chave mestra",
   "transfer.instructions.attention.title.label": "Atenção",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Endereços formados pela combinação de uma chave de gastos e uma chave de stake",
   "wallet.address.category.p2pk": "Endereços gerados diretamente de uma chave pública",
   "wallet.address.category.reward": "Endereço para sua chave de staking",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount} das taxas",
   "wallet.backup.dialog.legacy.checkConfirm": "Deseja verificar se sua carteira precisa ser atualizada?",
   "wallet.backup.dialog.legacy.explanation": "Se você tinha algum ADA em sua carteira em 29 de novembro de 2019\n    você precisa atualizar sua carteira para uma \"carteira de recompensa\" da Shelley.",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Todos",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "Grupo",
   "wallet.receive.navigation.hasBalanceLabel": "Contém Balanço",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
