--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Bu API yöntemi henüz uygulanmadı.",
   "api.errors.GenericApiError": "Bir hata oluştu, lütfen tekrar deneyin.",
   "api.errors.IncorrectPasswordError": "Geçersiz cüzdan şifresi.",
-  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
+  "api.errors.NotEnoughMoneyToSendError": "Bu işlemi yapmak için yeterli para yok.",
   "api.errors.PromiseNotCalledYetError": "Uygulama tamamlanmadan sonuca erişildi.",
   "api.errors.ReportRequestError": "Yardım talebi gönderilirken bir sorun oluştu.",
   "api.errors.WalletAlreadyImportedError": "İçeri aktarmaya çalıştığınız cüzdan zaten mevcut.",
@@ -145,7 +145,7 @@
   "myWallets.wallets.neverSync": "Asla senkronize edilmedi",
   "myWallets.wallets.sumInfoText": "Toplam cüzdan bakiyesi",
   "networkError.label.message": "UYARI: Sunucuya bağlantı kurulamadı.<br>Lütfen internet bağlantınızı kontrol edin veya <a target='blank' href='https://twitter.com/YoroiWallet'>Twitter hesabımız</a>.<br>Görüntülenen geçmiş bakiye ve işlemleriniz , sunucu normale dönene kadar yanlış görünebilir, ama gerçek bakiyeniz etkilenmez.",
-  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "nightly.banner.label.message": "SİZ YOROI NIGHTLY ÜZERİNDESİNİZ.",
   "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Hissenizi henüz devretmediniz.",
   "noticeBoard.notice.costChanged.subMessage": "Eski masraf {oldCost} {currency} ve yeni masraf {newCost} {currency}",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Ayarlar",
   "sidebar.transfer": "Talep / Aktar",
   "sidebar.wallets": "Cüzdanlarım",
-  "testnet.shelley.label.message": "TESTNET ({network}) AĞINDASINIZ.",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Bakiyenizi geri yüklemek yaklaşık 1 dakika sürecektir. Bir sonraki adımda, tüm paranızı taşıyacak bir işlem sunulacak. Lütfen işlemin ayrıntılarını dikkatlice gözden geçirin. İşlemi yapmak için Cardano ağında standart bir işlem ücreti ödemeniz gerekecektir.",
   "transfer.form.masterkey.input.label": "Ana anahtar",
   "transfer.instructions.attention.title.label": "Dikkat",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Bir harcama anahtarı ve bir bahis anahtarı kombinasyonu ile oluşturulan adresler",
   "wallet.address.category.p2pk": "Doğrudan bir ortak anahtardan oluşturulan adresler",
   "wallet.address.category.reward": "Staking adresinizin anahtarı",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount} ücret",
   "wallet.backup.dialog.legacy.checkConfirm": "Cüzdanınızın yükseltilmesi gerekip gerekmediğini kontrol etmek ister misiniz?",
   "wallet.backup.dialog.legacy.explanation": "29 Kasım 2019 tarihinde cüzdanınızda ADA varsa,\n    cüzdanınızı Shelley \"ödül cüzdanı\"na yükseltmeniz gerekir.",
@@ -463,7 +464,7 @@
   "wallet.dashboard.stakePool.stake": "Bahis",
   "wallet.dashboard.stakePool.title": "Yetkilendirilmiş Bahis Hazuvu",
   "wallet.dashboard.stakePool.viewWebpage": "Havuz web sayfasına gözat",
-  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
+  "wallet.dashboard.summary.adaTitle": "Toplam {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Toplam Yetkilendirilenler",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Tümü",
   "wallet.receive.navigation.baseLabel": "Taban",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Kurumsal",
   "wallet.receive.navigation.groupLabel": "Grup",
   "wallet.receive.navigation.hasBalanceLabel": "Bakiyeniz",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
