--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -293,7 +293,7 @@
   "sidebar.settings": "设置",
   "sidebar.transfer": "获取/转移",
   "sidebar.wallets": "我的钱包",
-  "testnet.shelley.label.message": "您正在使用测试网网络({network})。",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "恢复余额大约需要1分钟。 在下一步，您将看到一笔交易，该交易将移动您的所有资金。 请仔细阅读交易细节。 您需要在Cardano网络上支付标准交易费用才能进行交易。",
   "transfer.form.masterkey.input.label": "主密钥",
   "transfer.instructions.attention.title.label": "注意",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "使用支付密钥和权益密钥的组合创建的地址",
   "wallet.address.category.p2pk": "直接从公钥创建的地址",
   "wallet.address.category.reward": "委托密钥地址",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount} 手续费",
   "wallet.backup.dialog.legacy.checkConfirm": "检查您的钱包是否需要升级？",
   "wallet.backup.dialog.legacy.explanation": "如果你的钱包（2019年11月29日前）中有ADA，你需要将您的钱包升级至Shelley钱包。",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "所有",
   "wallet.receive.navigation.baseLabel": "基",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "组",
   "wallet.receive.navigation.hasBalanceLabel": "有余额",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
