--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -145,7 +145,7 @@
   "myWallets.wallets.neverSync": "Nooit gesynchroniseerd",
   "myWallets.wallets.sumInfoText": "Totaal saldo",
   "networkError.label.message": "WAARSCHIWING: Geen verbinding met de server.<br>Controleer uw internetverbinding of bezoek ons op: <a target='blank' href='https://twitter.com/YoroiWallet'> Twitter </a>.<br>De balans en transactiegeschiedenis kunnen afwijkingen vertonen tot onze servers weer normaal functioneren. Uw balans is niet aangetast.",
-  "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY.",
+  "nightly.banner.label.message": "DIT IS \"YOROI NIGHTLY\", het Yoroi testprogramma.",
   "noticeBoard.noNoticeText.chooseAPool": "Om hier meldingen te bekijken, moet u eerst <strong> een pool kiezen </strong> en uw {ticker} delegeren.",
   "noticeBoard.noNoticeText.notDelegatedYet": "U heeft nog geen stemmen gedelegeerd.",
   "noticeBoard.notice.costChanged.subMessage": "Oude kosten {oldCost} {currency}, nieuwe kosten zijn {newCost} {currency}",
@@ -293,7 +293,7 @@
   "sidebar.settings": "Instellingen",
   "sidebar.transfer": "Claim / Overdracht",
   "sidebar.wallets": "Mijn Portemonnees",
-  "testnet.shelley.label.message": "U BENT OP HET TESTNET NETWERK ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Het kost ongeveer 1 minuut om uw balans te controleren. In de volgende stap wordt u een transactie getoond dat all uw fondsen zal verplaatsen. Controleer de gegevens van de transactie zorgvuldig. U dient een standaard transactievergoeding te betalen op het Cardano netwerk om de transactie uit te voeren.",
   "transfer.form.masterkey.input.label": "Hoofdsleutel",
   "transfer.instructions.attention.title.label": "Opletten",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Adressen die gevormd zijn door de combinatie van een bestedingssleutel en een \"stake\" sleutel",
   "wallet.address.category.p2pk": "Adressen die rechtstreeks gegenereerd zijn vanuit een openbare sleutel",
   "wallet.address.category.reward": "Het adres voor uw \"stem\" sleutel",
+  "wallet.address.category.single": "Adressen die alleen een betaalsleutel bevatten en geen \"Stake\"-sleutel",
   "wallet.amountInput.feesLabel": "+ {amount} vergoedingen",
   "wallet.backup.dialog.legacy.checkConfirm": "Wilt u controleren of uw Portemonnee bijgewerkt moet worden?",
   "wallet.backup.dialog.legacy.explanation": "Als u op 29 november 2019 ADA in uw portemonnee had,\nmoet u uw Portemonnee bijwerken naar een Shelley \"Belonings Portemonnee\".",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "Alles",
   "wallet.receive.navigation.baseLabel": "Basis",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Onderneming",
   "wallet.receive.navigation.groupLabel": "Groep",
   "wallet.receive.navigation.hasBalanceLabel": "Heeft saldo",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
@@ -691,8 +693,8 @@
   "wallet.transaction.transactionId": "Transactie ID",
   "wallet.transaction.type": "{currency} transactie",
   "wallet.transaction.type.exchange": "Exchange",
-  "wallet.transaction.type.intrawallet": "{currency} transactie tussen Portemonnees",
-  "wallet.transaction.type.multiparty": "{currency} transacties tussen meerdere partijen",
+  "wallet.transaction.type.intrawallet": "{currency} transactiekosten",
+  "wallet.transaction.type.multiparty": "{currency} meerparrijen transactie",
   "wallet.transaction.withdraw": "Opname",
   "wallet.transaction.withdrawalsLabel": "Opnames",
   "wallet.transfer.cards.byron": "Byron-tijdperk Portemonnee",
