--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -293,7 +293,7 @@
   "sidebar.settings": "Настройки",
   "sidebar.transfer": "Заявить / Перевести",
   "sidebar.wallets": "Мои кошельки",
-  "testnet.shelley.label.message": "ВЫ В ТЕСТНЕТЕ ({network}).",
+  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "Восстановление Вашего баланса займет около 1 минуты. На следующем этапе Вам будет показана транзакция, которая переместит все Ваши средства. Пожалуйста, тщательно просмотрите детали транзакции. Вам потребуется оплатить стандартную комиссию в сети Cardano за проведение транзакции.",
   "transfer.form.masterkey.input.label": "Мастер-ключ",
   "transfer.instructions.attention.title.label": "Внимание",
@@ -366,6 +366,7 @@
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
   "wallet.address.category.reward": "Address for your staking key",
+  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ комиссия {amount}",
   "wallet.backup.dialog.legacy.checkConfirm": "Хотите ли вы проверить если необходимы обновления для вашего кошелька?",
   "wallet.backup.dialog.legacy.explanation": "Если в вашем кошельке была какая-либо сумма ADA на 29 ноября 2019 года,\n    вам необходимо обновить свой кошелек к версии Shelley \"кошелек для наград\".",
@@ -535,6 +536,7 @@
   "wallet.receive.navigation.allLabel": "All",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
+  "wallet.receive.navigation.enterpriseLabel": "Enterprise",
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
