--- a/app/i18n/locales/sk-SK.json
+++ b/app/i18n/locales/sk-SK.json
@@ -1,44 +1,44 @@
 {
-  "api.errors.ApiMethodNotYetImplementedError": "Tato API metoda není ještě implementována.",
-  "api.errors.GenericApiError": "Vyskytla se chyba, zkuste to prosím později.",
-  "api.errors.IncorrectPasswordError": "Nesprávné heslo k peněžence.",
+  "api.errors.ApiMethodNotYetImplementedError": "This API method is not yet implemented.",
+  "api.errors.GenericApiError": "An error occurred, please try again later.",
+  "api.errors.IncorrectPasswordError": "Incorrect wallet password.",
   "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
-  "api.errors.PromiseNotCalledYetError": "Výsledek zpřístupněn před dokončením příkazu.",
-  "api.errors.ReportRequestError": "Při odesílání požadavku na podporu se vyskytl problém.",
-  "api.errors.WalletAlreadyImportedError": "Peněženka, kterou se snažíte importovat, již existuje.",
-  "api.errors.WalletAlreadyRestoredError": "Peněženka, kterou se snažíte obnovit, již existuje.",
-  "api.errors.WalletFileImportError": "Peněženku nelze importovat. Ujistěte se, že zadáváte správný soubor.",
-  "api.errors.checkAdressesInUseApiError": "Při kontrole použitých adres se ze serveru vrátila chyba.",
-  "api.errors.currentCoinPriceError": "Aktuální údaje o cenách mincí nejsou momentálně k dispozici.",
-  "api.errors.discoverAddressesError": "Při objevování adres došlo k chybě ve metody API.",
-  "api.errors.generateTransferTxError": "Chyba při vytváření transakce.",
+  "api.errors.PromiseNotCalledYetError": "Result accessed before execution finished.",
+  "api.errors.ReportRequestError": "There was a problem sending the support request.",
+  "api.errors.WalletAlreadyImportedError": "The wallet you are trying to import already exists.",
+  "api.errors.WalletAlreadyRestoredError": "The wallet you are trying to restore already exists.",
+  "api.errors.WalletFileImportError": "Wallet could not be imported. Please make sure you are providing the correct file.",
+  "api.errors.checkAdressesInUseApiError": "Error received from server while checking used addresses.",
+  "api.errors.currentCoinPriceError": "Current coin price data not available now.",
+  "api.errors.discoverAddressesError": "Error received from API method call while discovering addresses.",
+  "api.errors.generateTransferTxError": "Error while generating transaction.",
   "api.errors.getAccountStateApiError": "Error received from server while getting account state.",
-  "api.errors.getAddressesWithFundsError": "Chyba při získávání adres s prostředky.",
-  "api.errors.getAllUTXOsForAddressesError": "Při získávání UTxOs došlo k chybě ve volání metody API.",
-  "api.errors.getBalanceError": "Chyba při zjišťování zůstatku.",
+  "api.errors.getAddressesWithFundsError": "Error while getting addresses with funds.",
+  "api.errors.getAllUTXOsForAddressesError": "Error received from api method call while getting UTxOs.",
+  "api.errors.getBalanceError": "Error while getting balance.",
   "api.errors.getBestBlockApiError": "Error received from server while getting best block.",
   "api.errors.getPoolInfoApiError": "Error received from server while getting pool info.",
   "api.errors.getReputationError": "Error received from server while getting reputation.",
   "api.errors.getRewardHistoryApiError": "Error received from server while getting reward history.",
-  "api.errors.getTxHistoryForAddressesApiError": "Server vrátil chybu při přijímání transakcí.",
-  "api.errors.getTxsBodiesForUTXOsApiError": "Chyba serveru během přijímání TxBodies.",
-  "api.errors.getTxsBodiesForUTXOsError": "Chyba z volání api metody během přijímání TxBodies.",
-  "api.errors.getUtxosForAddressesApiError": "Chyba serveru během získávání UTxOs.",
-  "api.errors.getUtxosSumsForAddressesApiError": "Chyba serveru při zjišťování zůstatku.",
+  "api.errors.getTxHistoryForAddressesApiError": "Error received from server while getting transactions.",
+  "api.errors.getTxsBodiesForUTXOsApiError": "Error received from server while getting TxBodies.",
+  "api.errors.getTxsBodiesForUTXOsError": "Error received from api method call while getting TxBodies.",
+  "api.errors.getUtxosForAddressesApiError": "Error received from server while getting UTxOs.",
+  "api.errors.getUtxosSumsForAddressesApiError": "Error received from server while getting balance.",
   "api.errors.hardwareUnsupportedError": "This action is not supported for the currently selected hardware.",
-  "api.errors.histoicalCoinPriceError": "Historické ceny mincí nyní nejsou k dispozici.",
-  "api.errors.invalidMnemonicError": "Byla zadána neplatná fráze, prosíme o kontrolu.",
-  "api.errors.invalidWitnessError": "Podpis není správný.",
-  "api.errors.noInputsError": "Peněženka obnovena z vaší bezpečnostní fráze je prázdná. Prosíme o kontrolu bezpečností fráze a pokus opakujte znovu.",
+  "api.errors.histoicalCoinPriceError": "Historical coin price data not available now.",
+  "api.errors.invalidMnemonicError": "Invalid phrase entered, please check.",
+  "api.errors.invalidWitnessError": "The signature is invalid.",
+  "api.errors.noInputsError": "The wallet restored from your recovery phrase is empty. Please check your recovery phrase and attempt restoration again.",
   "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
-  "api.errors.pendingTransactionError": "Chyba při aktualizaci čekajících transakcí.",
+  "api.errors.pendingTransactionError": "Error while updating pending transactions.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rewardAddressEmpty": "Reward address is empty.",
   "api.errors.rollbackApiError": "Rollback was detected.",
-  "api.errors.sendTransactionApiError": "Na serveru došlo při odesílání transakce k chybě.",
-  "api.errors.sendTransactionError": "Při odesílání transakce došlo k chybě ve volání metody api.",
-  "api.errors.serverStatusError": "Připojení k serveru se nezdařilo. Zkontrolujte připojení k internetu nebo náš Twitter účet (https://twitter.com/YoroiWallet).",
-  "api.errors.transactionError": "Při vytváření transakce došlo k chybě.",
+  "api.errors.sendTransactionApiError": "Error received from server while sending transaction.",
+  "api.errors.sendTransactionError": "Error received from api method call while sending transaction.",
+  "api.errors.serverStatusError": "Connection to the server failed. Please check your internet connection or our Twitter account (https://twitter.com/YoroiWallet).",
+  "api.errors.transactionError": "Error while creating transaction.",
   "api.errors.unusedAddressesError": "You cannot generate more than 20 consecutive unused addresses.",
   "api.errors.updateAdaTxsHistoryError": "Error while updating Ada transactions history.",
   "api.errors.updateAdaWalletError": "Error while updating Ada wallet.",
